<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cyan_background">

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:src="@drawable/no_signal"
        android:contentDescription="@string/no_network_icon"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/segoe"
        android:textColor="@color/grey_accent"
        android:textSize="24sp"
        android:text="@string/could_not_load_hotels"/>

    <TextView
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:layout_gravity="center"
        android:fontFamily="@font/segoe"
        android:textColor="@color/dark_grey"
        android:textSize="14sp"
        android:text="@string/make_sure_you_are_connected"/>

    <Button
        android:id="@+id/reload_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:layout_gravity="center"
        android:backgroundTint="@color/red"
        android:fontFamily="@font/segoe"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        android:text="@string/reload"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>



</LinearLayout>