<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/hotel_card"
    android:padding="8dp"
    android:layout_margin="8dp">

    <ImageView
        android:id="@+id/hotel_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_gravity="center_vertical"
        android:scaleType="centerCrop"
        android:contentDescription="@string/hotel_image_desc" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/hotel_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/grey_accent"
            android:fontFamily="@font/segoe"
            android:layout_marginBottom="4dp"
            android:text="@string/hotel_name_placeholder"/>

        <TextView
            android:id="@+id/hotel_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:fontFamily="@font/segoe"
            android:layout_marginBottom="4dp"
            android:text="@string/hotel_address_placeholder"/>

        <TextView
            android:id="@+id/hotel_distance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@android:color/darker_gray"
            android:fontFamily="@font/segoe"
            android:layout_marginBottom="4dp"
            android:text="@string/hotel_distance_placeholder"/>

        <RatingBar
            android:id="@+id/hotel_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/ratingBar"
            android:numStars="5"
            android:stepSize="0.5"
            android:isIndicator="true"
            android:rating="3"
            style="?android:attr/ratingBarStyleIndicator"/>

    </LinearLayout>

</LinearLayout>
